--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
         "bootstrap": "^5.3.3",
         "cross-env": "^7.0",
         "jquery": "^3.2",
-        "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
         "popper.js": "^1.12",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
-        "vue": "^2.5.17",
-        "vue-template-compiler": "^0.1.0"
+        "vue": "^2.7.0",
+        "vue-template-compiler": "^0.1.0",
+        "vite": "^3.0.2",
+        "laravel-vite-plugin": "^0.6.0",
+        "@vitejs/plugin-vue2": "^1.1.2"
     },
     "dependencies": {
         "moment": "^2.29.1",
